storage change forthe new endpoint
